MODON MRE BPDEV/force-app/main/default/objects/PassfortTransaction__c/PassfortTransaction__c.object-meta.xml
<CustomObject>
    <label>PassfortTransaction</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>PassfortTransaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PassfortTransactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>