MODON MRE BPDEV/force-app/main/default/objects/PassfortTransaction__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent transaction document record ids</inlineHelpText>
    <label>Document</label>
    <referenceTo>Documents__c</referenceTo>
    <relationshipLabel>PassfortTransactions</relationshipLabel>
    <relationshipName>PassfortTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>