MODON MRE BPDEV/force-app/main/default/objects/PassfortTransaction__c/fields/Final_Response__c.field-meta.xml
<CustomField>
    <fullName>Final_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>