MODON MRE BPDEV/force-app/main/default/objects/PassfortTransaction__c/fields/Is_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Is_Commercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Commercial</label>
    <type>Checkbox</type>
</CustomField>