MODON MRE BPDEV/force-app/main/default/objects/PassfortTransaction__c/fields/Is_Secondary_Market__c.field-meta.xml
<CustomField>
    <fullName>Is_Secondary_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Secondary Market</label>
    <type>Checkbox</type>
</CustomField>