MODON MRE BPDEV/force-app/main/default/objects/PassfortTransaction__c/fields/Linked_Shareholder_Details__c.field-meta.xml
<CustomField>
    <fullName>Linked_Shareholder_Details__c</fullName>
    <description>this field will contain data of shareholder details sent to link with company</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Shareholder details sent from this transaction</inlineHelpText>
    <label>Linked_Shareholder_Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>