MODON MRE BPDEV/force-app/main/default/objects/PassfortTransaction__c/fields/ParentDocumentIds__c.field-meta.xml
<CustomField>
    <fullName>ParentDocumentIds__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ParentDocumentIds</label>
    <type>TextArea</type>
</CustomField>