MODON MRE BPDEV/force-app/main/default/objects/PassfortTransaction__c/fields/PassfortTransaction__c.field-meta.xml
<CustomField>
    <fullName>PassfortTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent transaction record of either Corporate / Individual</inlineHelpText>
    <label>PassfortTransaction</label>
    <referenceTo>PassfortTransaction__c</referenceTo>
    <relationshipLabel>PassfortTransactions</relationshipLabel>
    <relationshipName>PassfortTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>