MODON MRE BPDEV/force-app/main/default/objects/PassfortTransaction__c/fields/ProfileId__c.field-meta.xml
<CustomField>
    <fullName>ProfileId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ProfileId</label>
    <type>TextArea</type>
</CustomField>