MODON MRE BPDEV/force-app/main/default/objects/PassfortTransaction__c/fields/response__c.field-meta.xml
<CustomField>
    <fullName>response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response received</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>