MODON MRE BPDEV/force-app/main/default/objects/PassfortTransaction__c/fields/transactionId__c.field-meta.xml
<CustomField>
    <fullName>transactionId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>transactionId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>