MODON MRE BPDEV/force-app/main/default/objects/PassfortTransaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EntityType__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>ParentDocumentIds__c</columns>
    <columns>ProfileId__c</columns>
    <columns>PassfortTransaction__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>